--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
         <h1>RainLexer</h1>
         <p>Rainmeter syntax highlighting plugin for Notepad++.</p>
         <p class="view"><a href="https://github.com/poiru/rainlexer">View the Project on GitHub <small>poiru/rainlexer</small></a></p>
-        <ul>
-          <li><a href="https://github.com/poiru/rainlexer/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/poiru/rainlexer/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/poiru/rainlexer">Fork On <strong>GitHub</strong></a></li>
-        </ul>
       </header>
       <section>
         <p><img src="http://i.imgur.com/nlWP1.png"></p>
@@ -37,7 +32,7 @@
 <li>Find RainLexer in the list, check it, and click <code>Install</code>
 </li>
 <li>Restart Notepad++ when prompted. Open .ini files may have to be reopened for the changes to take effect.</li>
-</ul><h2>Setting colors</h2>
+</ul><h2>Changing colors</h2>
 
 <p>To change the highlighting colors, open Notepad++ → <code>Settings</code> → <code>Style Configuration</code>. Then, scroll to the end of the language list to find <code>Rainmeter</code>. The following colors can be changed:</p>
 
@@ -70,7 +65,7 @@
 
 <p><img src="http://i.imgur.com/YHvAp.png"></p>
 
-<p>To assign shortcuts to the <code>Refresh skin</code> and <code>Refresh all</code> commands, select <code>Settings</code> → <code>Shortcut Mapper</code> → <code>Plugin commands</code> tab. Then, find the <code>Refresh skin</code> and <code>Refresh all</code> entries in the list to assign a shortcut.</p>
+<p>To assign shortcuts to the <code>Refreshing skin</code> and <code>Refresh all</code> commands, select <code>Settings</code> → <code>Shortcut Mapper</code> → <code>Plugin commands</code> tab. Then, find the <code>Refresh skin</code> and <code>Refresh all</code> entries in the list to assign a shortcut.</p>
 
 <p>To add the commands to the Notepad++ right-click context menu, select <code>Settings</code> → <code>Edit Popup ContextMenu</code>. Then, add the following lines into the file, save, and restart Notepad++.</p>
 
@@ -80,20 +75,10 @@
 &lt;Item id="0"/&gt;
 </code></pre>
 
-<p>To add the entries under a sub-menu, use:</p>
-
-<pre><code>&lt;Item id="0"/&gt;
-&lt;Item FolderName="Rainmeter" PluginEntryName="RainLexer" PluginCommandItemName="Refresh skin" /&gt;
-&lt;Item FolderName="Rainmeter" PluginEntryName="RainLexer" PluginCommandItemName="Refresh all" /&gt;
-&lt;Item id="0"/&gt;
-</code></pre>
-
-<p><img src="http://i.imgur.com/tSL2v.png"></p>
+<p><img src="http://i.imgur.com/tSL2v.png"></p><br/>
+<br/>
+<p><small>This project is maintained by <a href="https://github.com/poiru">poiru</a>. Hosted on GitHub Pages. Theme by <a href="https://github.com/orderedlist">orderedlist</a>.</small></p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/poiru">poiru</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
   </body>
