--- a/index.html
+++ b/index.html
@@ -26,12 +26,9 @@
 <h2>Installation</h2>
 
 <ul>
-<li>Ensure that Notepad++ 6.0 or higher is installed</li>
-<li>Open Notepad++ → <code>Plugins</code> → <code>Plugin Manager</code> → <code>Show Plugin Manager</code>
-</li>
-<li>Find RainLexer in the list, check it, and click <code>Install</code>
-</li>
-<li>Restart Notepad++ when prompted. Open .ini files may have to be reopened for the changes to take effect.</li>
+<li>Ensure that Notepad++ 6.0 or higher is installed.</li>
+<li>Close all instances of Notepad++.</li>
+<li><a href="https://github.com/downloads/poiru/rainlexer/RainLexer-1.1.3.exe">Download RainLexer 1.1.3</a>.</li>
 </ul><h2>Changing colors</h2>
 
 <p>To change the highlighting colors, open Notepad++ → <code>Settings</code> → <code>Style Configuration</code>. Then, scroll to the end of the language list to find <code>Rainmeter</code>. The following colors can be changed:</p>
@@ -50,15 +47,15 @@
 <li>
 <strong>EQUALS</strong>: <code>=</code> after options</li>
 <li>
-<strong>INVALID VALUE</strong>: Invalid values for options (e.g. <code>Measure=Blaa</code>)</li>
+<strong>INVALID VALUE</strong>: Invalid values for options (e.g. <code>Blaa</code> in <code>Measure=Blaa</code>)</li>
 <li>
-<strong>VALID VALUE</strong>: Valid values for options (e.g. <code>Measure=CPU</code>)</li>
+<strong>VALUE</strong>: Valid values for options (e.g. <code>CPU</code> in <code>Measure=CPU</code>)</li>
 <li>
 <strong>BANG</strong>: Valid bangs (e.g. <code>!HideMeter</code>)</li>
 <li>
-<strong>INT VARIABLE</strong>: Built-in variables (e.g. <code>#CURRENTPATH#</code>)</li>
+<strong>VARIABLE</strong>: Built-in variables (e.g. <code>#CURRENTPATH#</code>)</li>
 <li>
-<strong>EXT VARIABLE</strong>: Custom variables (e.g. <code>#MyVariable#</code>)</li>
+<strong>USER VARIABLE</strong>: Custom variables (e.g. <code>#MyVariable#</code>)</li>
 </ul><h2>Refresh skin</h2>
 
 <p>To refresh the skin corresponding to the currently open .ini file in Notepad++, select <code>Plugins</code> → <code>RainLexer</code> → <code>Refresh skin</code>.</p>
