--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <header>
         <h1>RainLexer</h1>
         <p>Rainmeter syntax highlighting plugin for Notepad++.</p>
-        <p class="view"><a href="https://github.com/poiru/rainlexer">View the Project on GitHub <small>poiru/rainlexer</small></a></p>
+        <p class="view"><a href="https://github.com/poiru/rainlexer">GitHub: poiru/rainlexer</a></p>
+        <p><br/><br/><br/>Support the development of RainLexer:<br/><form action="https://www.paypal.com/cgi-bin/webscr" method="post"><input type="hidden" name="cmd" value="_s-xclick"><input type="hidden" name="hosted_button_id" value="T6ZJK2SF5XEP4"><input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"><img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1"></form></p>
       </header>
       <section>
         <p><img src="http://i.imgur.com/nlWP1.png"></p>
@@ -28,7 +29,7 @@
 <ul>
 <li>Ensure that Notepad++ 6.0 or higher is installed.</li>
 <li>Close all instances of Notepad++.</li>
-<li><a href="https://github.com/downloads/poiru/rainlexer/RainLexer-1.1.3.exe">Download RainLexer 1.1.3</a>.</li>
+<li><a href="https://github.com/downloads/poiru/rainlexer/RainLexer-1.1.3.exe"><b>Download</b> RainLexer 1.1.3</a>.</li>
 </ul><h2>Changing colors</h2>
 
 <p>To change the highlighting colors, open Notepad++ → <code>Settings</code> → <code>Style Configuration</code>. Then, scroll to the end of the language list to find <code>Rainmeter</code>. The following colors can be changed:</p>
