--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
         <h1>RainLexer</h1>
         <p>Rainmeter syntax highlighting plugin for Notepad++.</p>
-        <p class="view"><a href="https://github.com/poiru/rainlexer">GitHub: poiru/rainlexer</a></p>
+        <p>GitHub: <a href="https://github.com/poiru/rainlexer">poiru/rainlexer</a></p>
         <p><br/><br/><br/>Support the development of RainLexer:<br/><form action="https://www.paypal.com/cgi-bin/webscr" method="post"><input type="hidden" name="cmd" value="_s-xclick"><input type="hidden" name="hosted_button_id" value="T6ZJK2SF5XEP4"><input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"><img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1"></form></p>
       </header>
       <section>
