--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <h1>RainLexer</h1>
         <p>Rainmeter syntax highlighting plugin for Notepad++.</p>
         <p>GitHub project: <a href="https://github.com/poiru/rainlexer">poiru/rainlexer</a></p>
-        <p><br/><br/><br/>Support the development of RainLexer:<form action="https://www.paypal.com/cgi-bin/webscr" method="post"><input type="hidden" name="cmd" value="_s-xclick"><input type="hidden" name="hosted_button_id" value="T6ZJK2SF5XEP4"><input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"><img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1"></form></p>
       </header>
       <section>
         <p><img src="http://i.imgur.com/nlWP1.png"></p>
@@ -77,6 +76,10 @@
 <br/>
 <p><small>This project is maintained by <a href="https://github.com/poiru">poiru</a>. Hosted on GitHub Pages. Theme by <a href="https://github.com/orderedlist">orderedlist</a>.</small></p>
       </section>
+      <footer>
+        <p>Support the development of RainLexer:</p>
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post"><input name="cmd" value="_s-xclick" type="hidden"><input name="hosted_button_id" value="T6ZJK2SF5XEP4" type="hidden"><input src="RainLexer%20by%20poiru_files/btn_donate_LG.gif" name="submit" alt="PayPal - The safer, easier way to pay online!" type="image" border="0"><img alt="" src="RainLexer%20by%20poiru_files/pixel.gif" height="1" width="1" border="0"></form>
+      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
   </body>
