--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <ul>
 <li>Ensure that Notepad++ 6.0 or higher is installed.</li>
 <li>Close all instances of Notepad++.</li>
-<li><a href="https://github.com/downloads/poiru/rainlexer/RainLexer-1.1.3.exe"><b>Download</b> RainLexer 1.1.3</a>.</li>
+<li><a href="http://rainlexer.googlecode.com/files/RainLexer-1.1.4.exe"><b>Download</b> RainLexer 1.1.4</a>.</li>
 </ul><h2>Changing colors</h2>
 
 <p>To change the highlighting colors, open Notepad++ → <code>Settings</code> → <code>Style Configuration</code>. Then, scroll to the end of the language list to find <code>Rainmeter</code>. The following colors can be changed:</p>
