--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h2>Installation</h2>
 
 <ul>
-<li>Ensure that Notepad++ 6.0 or higher is installed.</li>
+<li>Ensure that Notepad++ 6.0 or higher is installed. The 64bit version of 7.0 is supported.</li>
 <li>Close all instances of Notepad++.</li>
 <li><a href="https://github.com/poiru/rainlexer/releases/download/v2.0.0/RainLexer-2.0.0.exe"><b>Download</b> RainLexer 2.0.0</a>.</li>
 </ul><h2>Changing colors</h2>
