--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h2>Installation</h2>
 
 <ul>
-  <li>Ensure that <b>Notepad++ 7.6 or higher</b> is installed. The 64bit version of 7.6 is supported.</li>
+  <li>Ensure that Notepad++ 7.6 or higher is installed. The 64bit version of 7.6 is supported.</li>
 <li>Close all instances of Notepad++.</li>
 <li><a href="https://github.com/poiru/rainlexer/releases/download/v2.1.0/RainLexer-2.1.0.exe"><b>Download</b> RainLexer 2.1.0</a>.</li>
 </ul><h2>Changing colors</h2>
