--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 
 <ul>
   <li>Ensure that Notepad++ 7.6 or higher is installed. The 64bit version of 7.6 is supported.</li>
-<li>Close all instances of Notepad++.</li>
-<li><a href="https://github.com/poiru/rainlexer/releases/download/v2.1.0/RainLexer-2.1.0.exe"><b>Download</b> RainLexer 2.1.0</a>.</li>
-</ul><h2>Changing colors</h2>
+  <li>Close all instances of Notepad++.</li>
+  <li><a href="https://github.com/poiru/rainlexer/releases/download/v2.1.0/RainLexer-2.1.0.exe"><b>Download</b> RainLexer 2.1.0</a>.</li>
+</ul>
+        
+<h2>Changing colors</h2>
 
 <p>To change the highlighting colors, open Notepad++ → <code>Settings</code> → <code>Style Configuration</code>. Then, scroll to the end of the language list to find <code>Rainmeter</code>. The following colors can be changed:</p>
 
