--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <h2>Installation</h2>
 
 <ul>
-  <li>Ensure that Notepad++ 7.6.3 or higher is installed. The <b>64bit version</b> of 7.6.3 is supported.</li>
+  <li>Ensure that Notepad++ 7.6.3 or higher is installed.</li>
   <li>Close all instances of Notepad++.</li>
-  <li><a href="https://github.com/poiru/rainlexer/releases/download/v2.4.0/RainLexer-2.4.0.exe"><b>Download</b> RainLexer 2.4.0</a>.</li>
+  <li><a href="https://github.com/poiru/rainlexer/releases/download/v2.5.0/RainLexer-2.5.0.exe"><b>Download</b> RainLexer 2.5.0</a>.</li>
 </ul>
         
 <h2>Changing colors</h2>
