Use https:// for images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>GitHub project: <a href="https://github.com/poiru/rainlexer">poiru/rainlexer</a></p>
       </header>
       <section>
-        <p><img src="http://i.imgur.com/nlWP1.png"></p>
+        <p><img src="https://user-images.githubusercontent.com/1319028/89069634-32359800-d37c-11ea-88f2-843f2b9b7675.png"></p>
 
 <h2>Installation</h2>
 
@@ -62,7 +62,7 @@
 
 <p>To refresh the skin corresponding to the currently open .ini file in Notepad++, select <code>Plugins</code> → <code>RainLexer</code> → <code>Refresh skin</code>.</p>
 
-<p><img src="http://i.imgur.com/YHvAp.png"></p>
+<p><img src="https://user-images.githubusercontent.com/1319028/89069630-31046b00-d37c-11ea-927e-f0a219339399.png"></p>
 
 <p>To assign shortcuts to the <code>Refreshing skin</code> and <code>Refresh all</code> commands, select <code>Settings</code> → <code>Shortcut Mapper</code> → <code>Plugin commands</code> tab. Then, find the <code>Refresh skin</code> and <code>Refresh all</code> entries in the list to assign a shortcut.</p>
 
@@ -74,7 +74,7 @@
 &lt;Item id="0"/&gt;
 </code></pre>
 
-<p><img src="http://i.imgur.com/tSL2v.png"></p><br/>
+<p><img src="https://user-images.githubusercontent.com/1319028/89069632-319d0180-d37c-11ea-85ad-c4ffc7cacf9a.png"></p><br/>
 <br/>
 <p><small>This project is maintained by <a href="https://github.com/poiru">poiru</a>. Hosted on GitHub Pages. Theme by <a href="https://github.com/orderedlist">orderedlist</a>.</small></p>
       </section>
