--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <p><img src="https://user-images.githubusercontent.com/1319028/89069632-319d0180-d37c-11ea-85ad-c4ffc7cacf9a.png"></p><br/>
 <br/>
-<p><small>This project is maintained by <a href="https://github.com/poiru">poiru</a>. Hosted on GitHub Pages. Theme by <a href="https://github.com/orderedlist">orderedlist</a>.</small></p>
+<p><small>Created by <a href="https://github.com/poiru">Biru Mohanathas</a> and maintained by the Rainmeter Team. Theme by <a href="https://github.com/orderedlist">orderedlist</a>.</small></p>
       </section>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
