--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>RainLexer by poiru</title>
+    <title>RainLexer</title>
     
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -76,7 +76,7 @@
 
 <p><img src="https://user-images.githubusercontent.com/1319028/89069632-319d0180-d37c-11ea-85ad-c4ffc7cacf9a.png"></p><br/>
 <br/>
-<p><small>Created by <a href="https://github.com/poiru">Biru Mohanathas</a> and maintained by the Rainmeter Team. Theme by <a href="https://github.com/orderedlist">orderedlist</a>.</small></p>
+<p><small>Created by <a href="https://github.com/poiru">poiru</a> and maintained by the Rainmeter Team. Theme by <a href="https://github.com/orderedlist">orderedlist</a>.</small></p>
       </section>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
